fix align center

--- a/pages/name-card/name-card.css
+++ b/pages/name-card/name-card.css
@@ -3,9 +3,12 @@ html,body{
     width: 100%;
     padding: 0rem;
     margin: 0rem;
+    background-color: black;
 }
 
 #name-card{
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
